# cYt-dlp

./: CMakeLists.txt  README.md  main.cpp
doc/: 内嵌python,有手就行.pptx
sdk/mac/lib/: Python
sdk/win/include/python/: pyconfig.h
